# sotti

./: .env.example  .gitignore  README.md  example.code.java  prd.md  prompt.md  pyproject.toml  think_test.py  vercel.json
data/: state.json
data/Clone-Employee-Object/: Solution.java  attempt_1_response.json  attempt_1_verify.txt  attempt_2_response.json  attempt_2_verify.txt  ocr_raw.txt  orchestrator_plan.txt
data/Practice-Programming-Assignment-1/: Solution.java  attempt_1_raw.md  orchestrator_plan.txt  question.md  session_summary.json  solution.md
data/Practice-Programming-Assignment-2/: question.md
data/Second-Dose-Vaccination-Eligibility/: Solution.java  attempt_1_raw.md  attempt_1_verify.txt  attempt_2_raw.md  attempt_2_verify.txt  orchestrator_plan.txt  question.md  session_summary.json  solution.md
oppe-pyq/: Q10_DispatchEx.java  Q11_FClassMaps.java  Q12_DispatchPlaneEx.java  Q13_ExamBranch.java  Q14_FClassResort.java  Q15_HospitalSystem.java  Q1_Admission.java  Q2_InterAbstrTest.java  Q3_DispatchExample.java  Q4_FClass.java  Q5_ComplexNum.java  Q6_Organisation.java  Q7_InterfaceTest.java  Q8_PublicationSystem.java  Q9_Rectangle.java
src/: __init__.py  agent_manager.py  config.py  data_logger.py  main.py  startup_checks.py  state.py  verifier.py  watcher.py
static/: index.html  manifest.json  sw.js
tmp/: .gitkeep
